--- a/src/app/components/editor/editor.component.html
+++ b/src/app/components/editor/editor.component.html
@@ -12,8 +12,9 @@ class="editor"
 #editor
 >
 </div>
-<div class="mt-2">
+<div class="m-2 ml-0">
     <p-button type="button" (click)="showEditorData()">
         Сохранить текст
     </p-button>
+    <!-- <button type="button" (click)="addNewItem('sasa')">Add to parent's list</button> -->
 </div>
