--- a/src/app/pages/create-post/create-post.component.css
+++ b/src/app/pages/create-post/create-post.component.css
@@ -4,3 +4,10 @@
     left: 5px;
     z-index: 20;
 }
+
+.note-editor{
+    /* margin-top: 80px; */
+    /* position: absolute; */
+    height: auto;
+    width: 500px;
+}
