--- a/src/app/pages/create-post/create-post.component.html
+++ b/src/app/pages/create-post/create-post.component.html
@@ -32,13 +32,13 @@
         (onClick)="onSave()"
         severity="success"
         [rounded]="true"
-        >Сохранить</p-button>
+        >Сохранить изменения</p-button>
         <p-button
         [routerLink]=" '/' "
         class="ml-2"
         severity="danger"
         [rounded]="true"
-        >Отменить изменения</p-button>
+        >Назад</p-button>
     </div>
 </div>
 
