--- a/src/app/pages/login-page/login-page.component.html
+++ b/src/app/pages/login-page/login-page.component.html
@@ -1,11 +1,10 @@
 <div
 class="flex justify-content-center surface-200 absolute top-0 right-0 left-0 bottom-0 z-5"
 >
-    @if (alert.message) {
+    <!-- @if (showAlert) { -->
         <app-alert
-        [alertSettings]=" alert "
         />
-    }
+    <!-- } -->
     <p-card
     class="mt-8"
     >
